# GarminDB

./: .gitignore  pyproject.toml  requirements.txt
garmindb/: garmin_connect_config_manager.py  garmin_json_data.py
garmindb/garmindb/: activities_db.py
