[project]
name = "garmindb"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxime Puys",email = "drakes00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy (==2.0.49)",
    "python-dateutil (==2.9.0.post0)",
    "cached-property (==2.0.1)",
    "tqdm (==4.67.1)",
    "garminconnect (==0.3.3)",
    "fitfile (>=1.2.0)",
    "tcxfile (>=1.0.4)",
    "idbutils (>=1.1.0)",
    "tornado (>=6.5.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
